# Note

./: README.md  Web crawler study  Web crawler train  第2关 - http请求分析及头构造使用.ipynb
C_CPP/: .clang-format  other_information.md
C_CPP/boost/: version_test.cpp
C_CPP/boost_study/mem_man/: Makefile  mem_man.md  sc_ptr.cpp  sc_ptr_exam
C_CPP/boost_study/mem_man/basis_CPP/: Makefile  auto_ptr_exam  auto_ptr_test.cpp  sh_ptr.cpp  smart_ptr.cpp  u_ptr.cpp  w_ptr.cpp  w_ptr_exam
C_CPP/boost_study/timer/: Makefile  custom_surface_val.cpp  date_time_exam.cpp  format_date.cpp  time_duration_exam.cpp  timer_exam.cpp  turn_time_zone.cpp
C_CPP/boost_study/timer/comprehensive_test/: calc_work_time.cpp  free_credit_card.cpp  microsec_clock.cpp  simple_date_cal.cpp  (+1 more)
C_CPP/ex-cpp/smart_ptr/: s_ptr_note.md  simple_shared_ptr.hpp
C_CPP/make_study/ch001/: ch001.md
C_CPP/make_study/ch002/: helloCMake.cmake
C_CPP/make_study/ch003/: ch003.md  use_cmd.cmake
C_CPP/make_study/ch004/: ch004.md  math.cmake
Homework/Complier class/: .qmake.stash  CMakeLists.txt  DFAmodel.cpp  DFAmodel.h  Makefile  Makefile.Debug  Makefile.Release  NFAmodel.cpp  NFAmodel.h  RE_qt.pro  REmodel.cpp  REmodel.h  ctr_file.cpp  ctr_file.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  test.txt  ui_mainwindow.h
Web crawler train/: 第1关 - requests库及lxml库入门.ipynb
杂七杂八的python笔记/: Python 常规操作补完.py  微博抓包.ipynb  正则表达式与字符串.py  正则表达式和字符串.ipynb  游戏及绘图简单制作.py  类的补全笔记.py  网络笔记.ipynb  进程和线程.ipynb
来点 Pytorch/一些神经网络模型基础/: 神经网络模型基础.md
来点 Pytorch/文本特征提取相关内容/词向量/: word2vec——词向量.md
来点 Pytorch/神经网络基础/: test  神经网络.md
(+90 files in other folders)
